src/components/post/styles.scss
@import "../../scss/globals.scss";

.post {
  word-break: break-word;
  position: relative;

  /* stylelint-disable no-duplicate-selectors, no-descending-specificity */
  H2,
  H3,
  H3,
  SECTION H2:first-child,
  SECTION H3:first-child,
  SECTION H3:first-child {
    transition: all .5s;
  }

  H2 {
    font-size: 2.1rem;
  }

  H3 {
    font-size: 1.75rem;
  }

  H4 {
    font-size: 1.4rem;
  }

  H5 {
    font-size: 1.15rem;
  }

  SECTION H2 {
    margin: 2rem 0 1rem;
  }

  @media ( max-width: 768px ) {
    H2:target,
    H3:target,
    H3:target,
    SECTION:target H2:first-child,
    SECTION:target H3:first-child,
    SECTION:target H3:first-child {
      padding-left: 1.75rem;
    }
  }
  /* stylelint-enable no-duplicate-selectors, no-descending-specificity */

  IMG {
    margin: 1rem 0;
    border: 1px solid #DDD;
  }

  IFRAME {
    width: 100%;
    margin: .5rem 0;
    border: 0;
  }

  TABLE {
    width: 100%;
    border-collapse: collapse;
    border-spacing: 0;
  }

  .table--w-auto {
    width: auto;
  }

  TH,
  TD {
    border-bottom: 1px solid #DDD;
    padding: 7px;
    text-align: left;
  }

  TH {
    white-space: nowrap;
    font-weight: bold;
    font-size: 1.2em;
  }

  THEAD TH {
    border-top: 1px solid #DDD;
    background: #EEE;
  }

  .gatsby-highlight,
  PRE[class*="language-"] {
    max-width: 100%;
    overflow: auto;
    font-size: 14px;
  }

  FIGURE {
    margin-left: 0;
    margin-right: 0;
  }

  FIGCAPTION {
    font-style: italic;
    color: #777;
  }

  .figure--text-on-right {
    @media ( min-width: 600px ) {
      display: flex;
    }

    margin-bottom: 2rem;

    IMG {
      margin-right: 2rem;
      align-self: flex-start;
    }
  }

  BLOCKQUOTE {
    margin-left: 0;
    padding-left: 1rem;
    padding-top: .5rem;
    padding-bottom: .5rem;
    border-left: 5px solid #DDD;
    font-style: italic;
  }

  OL,
  UL {
    padding: 0;
    list-style: none;
  }

  LI,
  DD {
    margin-bottom: .75rem;
  }

  UL UL LI,
  OL OL LI {
    margin-top: .75rem;
  }

  DL:not(.no-bullets) DD {
    @include item-with-dash;
  }

  UL:not(.no-bullets) LI {
    @include item-with-dash;
  }

  OL {
    counter-reset: num-list;
  }

  OL LI::before {
    content: counter(num-list) ". ";
    counter-increment: num-list;
  }

  HR {
    height: 0;
    margin: 1.5em 0;
    background: transparent;
    border: 0;
    border-bottom: 1px solid #DDD;
  }

  .widget {
    margin-top: 2rem;
  }
}

/* stylelint-disable declaration-no-important, no-descending-specificity */
.post__share {
  margin-top: 1.5rem;
}

.post__share LI {
  margin: 0 .75rem 0 0 !important;

  &::before,
  & A::before {
    content: none !important;
  }
}
/* stylelint-enable declaration-no-important, no-descending-specificity */

.post__header {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 2rem;
  padding-bottom: 5px;
  border-bottom: 1px solid #DDD;
}

.post__title {
  width: 100%;
  font-size: 2.5rem;
  margin-bottom: .4em;
}

.post__date,
.post__link-to-comments {
  font-size: .9em;
}

.post__warning {
  margin: 1rem 0;
  padding: 1em;
  border-radius: 10px;
  background: lightgoldenrodyellow;

  P:last-child {
    margin-bottom: 0;
  }

  P:first-child {
    margin-top: 0;
  }
}

.post__comments {
  margin-top: 2rem;
}

.post__marker {
  --translateX: -100%;

  display: block;
  position: absolute;
  top: 0;
  margin: 0 0 0 -.5rem;
  width: 2.25rem;
  height: 2.25rem;
  line-height: 63px;
  background-color: hsl(70, 70%, 60%);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23FFF' d='M19.414 27.414l10-10c0.781-0.781 0.781-2.047 0-2.828l-10-10c-0.781-0.781-2.047-0.781-2.828 0-0.781 0.781-0.781 2.047 0 2.828l6.586 6.586h-19.172c-1.105 0-2 0.895-2 2s0.895 2 2 2h19.172l-6.586 6.586c-0.39 0.39-0.586 0.902-0.586 1.414s0.195 1.024 0.586 1.414c0.781 0.781 2.047 0.781 2.828 0z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 80% 80%;
  border-radius: 50%;
  border: 5px solid #FFF;
  box-shadow: -2px 0 5px $base-shadow-color;
  transform: translateX(var(--translateX));
  transition: all .5s;
  opacity: 1;

  &:hover,
  &:active {
    background-color: $base-link-color;
    transform: translateX(var(--translateX)) rotate(-90deg);
  }

  @media ( max-width: 1000px ) {
    --translateX: -20%;

    width: 1.75rem;
    height: 1.75rem;
    border: 4px solid #FFF;
    margin-top: .2rem;
  }
}

.post__marker--hidden {
  opacity: 0;
}

